add project api and service desc
