# swagger.yaml
@@ -101,6 +101,48 @@ paths:
           description: Get Current User's Info Success
           schema:
             $ref: '#/definitions/UserInfo'
+  /project/create:
+    post:
+      tags:
+        - Project
+      operationId: CreateProject
+      description: Create Project
+      parameters:
+      - name: body
+        in: body
+        required: true
+        schema:
+          $ref: '#/definitions/ProjectInfo'
+      responses:
+        "201":
+          description: Create Project Success, return project info.
+          schema:
+            $ref: '#/definitions/ProjectInfo'
+        "409":
+          description: Create Project Failed, cause project exist
+          schema:
+            $ref: '#/definitions/Error'
+        "500":
+          description: Server Error
+          schema:
+            $ref: '#/definitions/Error'
+  /project/list:
+    get:
+      tags:
+        - Project
+      operationId: ListProject
+      description: List All Projects
+      responses:
+        "200":
+          description: List All Projects Success, return project info. (project name, project id, project description)
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/ProjectInfo'
+        "500":
+          description: Server Error
+          schema:
+            $ref: '#/definitions/Error'
 definitions:
   UserInfo:
     type: object
@@ -164,6 +206,118 @@ definitions:
         description: 错误信息
         type: string
         example: error message
+  ProjectInfo:
+    type: object
+    description: Project Object
+    properties:
+      id:
+        description: id
+        type: integer
+        example: 1
+      name:
+        description: project name
+        type: string
+        example: foobar
+      description:
+        description: project description
+        type: string
+        example: foobar project
+      create_at:
+        description: create at, unix timestamp
+        type: integer
+        example: 1528894200
+      update_at:
+        description: update at, unix timestamp
+        type: integer
+        example: 1528894200
+  ServiceInfo:
+    type: object
+    description: Service Object
+    properties:
+      id:
+        description: id
+        type: integer
+        example: 1
+      project_id:
+        description: project id
+        type: integer
+        example: 1
+      version_id:
+        description: version id
+        type: integer
+        example: 1
+      name:
+        description: service name
+        type: string
+        example: foobar
+      description:
+        description: service description
+        type: string
+        example: foobar service
+      replica:
+        description: number of pod replicas
+        type: integer
+        example: 1
+      expose_port:
+        description: expose port
+        type: integer
+        example: 80
+      create_at:
+        description: create at, unix timestamp
+        type: integer
+        example: 1528894200
+      update_at:
+        description: update at, unix timestamp
+        type: integer
+        example: 1528894200
+  ServiceVersion:
+    type: object
+    description: Service Version Object
+    properties:
+      id:
+        description: id
+        type: integer
+        example: 1
+      service_id:
+        description: service id
+        type: integer
+        example: 1
+      image:
+        description: image name
+        type: string
+        example: busybox:latest
+      name:
+        description: version name
+        type: string
+        example: foobar
+      description:
+        description: version description
+        type: string
+        example: foobar version
+      create_at:
+        description: create at, unix timestamp
+        type: integer
+        example: 1528894200
+  EnvironmentVariable:
+    type: object
+    description: Environment Variable for service deploy
+    properties:
+      id:
+        description: id
+        type: integer
+        example: 1
+      service_id:
+        description: service id
+        type: integer
+        example: 1
+      name:
+        description: environment variable name
+        type: string
+        example: foobar
+      value:
+        description: environment variable value
+        type: string
+        example: foobar
   AuthInfo:
     type: object
     properties:
